fix-scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,29 @@
-@import url('https://fonts.cdnfonts.com/css/messina-sans');
+@import url("https://fonts.cdnfonts.com/css/messina-sans");
 @import "tailwindcss";
 body {
-  font-family: 'Messina Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  font-family: "Messina Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.07);
+  border-radius: 10px;
+  border: 2px solid #ffffff;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.07) #ffffff;
 }
